--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "~3.1.0",
+    "express": ">=3.11.0",
     "hbs": "~2.0.2",
     "mongodb": "1.3.2"
   },
